# skills

./: README.md
spec-driven-python-audit/: SKILL.md
spec-driven-python-audit/scripts/: audit_project.py
spec-driven-python-init/: SKILLS.md
spec-driven-python-init/scripts/: init_project.py
spec-driven-python-init/templates/: AGENT_RULES.md  PLAN.md  PRD.md  README.md  pyproject.toml  test_example.py
spec-driven-python-workflow/: SKILL.md
